force-app/main/default/objects/Suggestion__c/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <label>Business Impact</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Efficiency Gain</fullName>
            </value>
            <value>
                <fullName>Cost Saving</fullName>
            </value>
            <value>
                <fullName>Revenue Generation</fullName>
            </value>
            <value>
                <fullName>User Convenience</fullName>
            </value>
            <value>
                <fullName>Error Reduction</fullName>
            </value>
            <value>
                <fullName>Automation Potential</fullName>
            </value>
            <value>
                <fullName>Security Enhancement</fullName>
            </value>
            <value>
                <fullName>Scalability</fullName>
            </value>
            <value>
                <fullName>Improved Reporting</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>