force-app/main/default/objects/Suggestion__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Security &amp; Access</fullName>
            </value>
            <value>
                <fullName>UI/UX Improvement</fullName>
            </value>
            <value>
                <fullName>Workflow Optimization</fullName>
            </value>
            <value>
                <fullName>Reporting &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Notifications &amp; Alerts</fullName>
            </value>
            <value>
                <fullName>Integration with Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Mobile Optimization</fullName>
            </value>
            <value>
                <fullName>System Performance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>