force-app/main/default/objects/Suggestion__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Feasible</fullName>
            </value>
            <value>
                <fullName>Too Costly</fullName>
            </value>
            <value>
                <fullName>Better Alternative Exists</fullName>
            </value>
            <value>
                <fullName>Low Business Impact</fullName>
            </value>
            <value>
                <fullName>Conflicts with Existing Processes</fullName>
            </value>
            <value>
                <fullName>Requires External Dependencies</fullName>
            </value>
            <value>
                <fullName>Not a Current Priority</fullName>
            </value>
            <value>
                <fullName>Security Concerns</fullName>
            </value>
            <value>
                <fullName>Compliance Restrictions</fullName>
            </value>
            <value>
                <fullName>Duplicates an Existing Feature</fullName>
            </value>
            <value>
                <fullName>Limited Technical Feasibility</fullName>
            </value>
            <value>
                <fullName>Requires Significant Maintenance Effort</fullName>
            </value>
            <value>
                <fullName>Lack of User Demand</fullName>
            </value>
            <value>
                <fullName>Future Consideration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>