force-app/main/default/objects/Suggestion__c/validationRules/Prevent_Rejected_Reason_If_Not_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Rejected_Reason_If_Not_Rejected</fullName>
    <active>true</active>
    <description>Ensures that Rejected_Reason__c is only set if Status__c is &quot;Rejected&quot;.</description>
    <errorConditionFormula>NOT(ISPICKVAL(Status__c, &quot;Rejected&quot;)) &amp;&amp; NOT(ISPICKVAL(Rejected_Reason__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Rejected Reason can only be set when Status is Rejected.</errorMessage>
</ValidationRule>