force-app/main/default/objects/Suggestion__c/validationRules/Require_Rejected_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Rejected_Reason</fullName>
    <active>true</active>
    <description>You must provide a Rejected Reason when setting the status to Rejected.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Rejected&quot;) &amp;&amp; ISPICKVAL(Rejected_Reason__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Rejected_Reason__c</errorDisplayField>
    <errorMessage>You must provide a Rejected Reason when setting the status to Rejected.</errorMessage>
</ValidationRule>