force-app/main/default/objects/Suggestion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Category__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Follow_up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>